+ sprites: minor alignment fixes and IE6 misbehavior workaround.

--- a/xims/www/ximsroot/skins/default/stylesheets/default.css
+++ b/xims/www/ximsroot/skins/default/stylesheets/default.css
@@ -295,8 +295,8 @@ tr.objrow:hover {
 
 .sprite-spacer {
     background: url(/ximsroot/skins/default/images/sprite.gif) no-repeat top left;
-    padding: 5px 0px 0px 18px;
-    margin: 0px 0px 0px 6px;
+    padding: 5px 0px 0px 20px;
+    display:inline-block;
 }
 .sprite-status-spacer {
     background: url(/ximsroot/skins/default/images/sprite.gif) no-repeat top left;
@@ -427,10 +427,10 @@ tr.objrow:hover {
 }
 
 .sprite-option_purge {
+    display: inline-block;
     background: url(/ximsroot/skins/default/images/sprite.gif) no-repeat top left;
     background-position: 0px -620px;
     padding: 0px 5px 0px 5px;
-    margin-left: 5px;
     border: 0;
     width: 37px;
 }
@@ -450,15 +450,16 @@ tr.objrow:hover {
     padding-left: 10000px;
 }
 .sprite-option_edit { 
+    display: inline-block;
     background: url(/ximsroot/skins/default/images/sprite.gif) no-repeat top left;
     background-position: 0px -680px;
     padding: 0px 0px 0px 20px;
-    margin-left: 5px;
     text-decoration: none;
     position:relative;
     z-index:24;
 }
 .sprite-option_copy { 
+    display: inline-block;
     background: url(/ximsroot/skins/default/images/sprite.gif) no-repeat top left;
     background-position: 0px -720px;
     padding: 0px 0px 0px 20px;
@@ -467,7 +468,8 @@ tr.objrow:hover {
     position:relative;
     z-index:24;
 }
-.sprite-option_move { 
+.sprite-option_move {
+    display: inline-block;
     background: url(/ximsroot/skins/default/images/sprite.gif) no-repeat top left;
     background-position: 0px -660px;
     padding: 0px 0px 0px 20px;
@@ -476,6 +478,7 @@ tr.objrow:hover {
     z-index:24;
 }
 .sprite-option_acl { 
+    display: inline-block;
     background: url(/ximsroot/skins/default/images/sprite.gif) no-repeat top left;
     background-position: 0px -740px;
     padding: 0px 0px 0px 20px;
@@ -484,6 +487,7 @@ tr.objrow:hover {
     z-index:24;
 }
 .sprite-option_undelete {
+    display: inline-block;
     background: url(/ximsroot/skins/default/images/sprite.gif) no-repeat top left;
     background-position: 0px -600px;
     padding: 0px 0px 0px 20px;
@@ -492,11 +496,11 @@ tr.objrow:hover {
     z-index:24;
 }
 .sprite-option_pub { 
+    display: inline-block;
     background: url(/ximsroot/skins/default/images/sprite.gif) no-repeat top left;
     background-position: 0px -640px;
     padding: 0px 0px 0px 20px;
     text-decoration: none;
-    margin-left: 3px;
     position:relative;
     z-index:24;
 }
